--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
+    <script src="index.js"></script>
 </head>
 <body>
-    <script>
-        console.log("Hello World");
-    </script>
 </body>
 </html>
